# wk

./: .gitignore  .justfile  Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: main.rs
crates/database/src/migrations/: mod.rs  v00000000_000001_create_table.rs
crates/database/src/models/: captcha.rs  host.rs  mod.rs  prelude.rs  user.rs
crates/proto/: Cargo.toml
crates/proto/src/agent/: config.rs  mod.rs  report.rs
crates/proto/src/auth/: captcha.rs  init.rs  mod.rs
