[workspace]
members = ["bin/agent", "bin/dashboard", "crates/database", "crates/proto"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.97"
jsonwebtoken = { version = "9.3.1", default-features = false }
axum = { version = "0.8.1", features = ["ws"] }
database = { path = "./crates/database" }
proto = { path = "./crates/proto" }
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.44.1", features = ["net", "rt-multi-thread", "signal"] }
uuidv7 = "0.1.7"
captcha = { version = "1.0.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.40"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace"] }
sea-orm = { version = "1.1.7", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1.7", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
] }
